# avalon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  avalon.toml  caddy.toml  docker-compose.yml
crates/caddy-core/: Cargo.toml
crates/caddy-core/src/: config.rs  lib.rs
crates/caddy-plugin/: Cargo.toml
crates/caddy-plugin/src/: error.rs  hooks.rs  lib.rs  loader.rs  manager.rs
crates/caddy-plugin/src/plugins/: auth.rs  cache.rs  compression.rs  file_server.rs  headers.rs  mod.rs  rewrite.rs
crates/caddy-proxy/: Cargo.toml
crates/caddy-proxy/src/: auth.rs  error.rs  file_server.rs  health.rs  lib.rs  plugin_integration.rs  proxy.rs  rewrite.rs  rhai_rewrite.rs  route.rs  upstream.rs
crates/caddy-tls/: Cargo.toml
crates/caddy-tls/src/: acme.rs  error.rs  lib.rs  provider.rs  renewal.rs  self_signed.rs  storage.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs  watcher.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: context.rs  executor.rs  lib.rs  loader.rs  manager.rs  plugin.rs  priority.rs  registry.rs  wasm.rs
crates/plugin/src/plugins/: access_log.rs  admin.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: access_log.rs  auth.rs  cache.rs  circuit_breaker.rs  compression.rs  cors.rs  error.rs  file_server.rs  health.rs  ip_filter.rs  lib.rs  metrics.rs  plugin_integration.rs  proxy.rs  rate_limit.rs  rewrite.rs  rhai_rewrite.rs  route.rs  script_handler.rs  upstream.rs
crates/tls/: Cargo.toml
crates/tls/src/: acme.rs  cloudflare.rs  error.rs  lib.rs  listener.rs  provider.rs  renewal.rs  self_signed.rs  sni.rs  storage.rs
docs/: configuration.md  examples.md  getting-started.md  rhai-scripting.md
src/: main.rs  telemetry.rs
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.js
website/src/components/: Comparison.astro  Features.astro  Footer.astro  Hero.astro  QuickStart.astro
website/src/i18n/: en.json  index.ts  zh.json
website/src/layouts/: DocsLayout.astro  Layout.astro
website/src/pages/: index.astro
website/src/pages/docs/: configuration.astro  examples.astro  index.astro  llm.txt.ts  rhai.astro
website/src/pages/zh/: index.astro
website/src/pages/zh/docs/: configuration.astro  examples.astro  index.astro  rhai.astro
