[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
caddy-core = { path = "crates/caddy-core" }
caddy-proxy = { path = "crates/caddy-proxy" }
caddy-tls = { path = "crates/caddy-tls" }

# Pingora
pingora = { version = "0.3", features = ["lb", "proxy"] }
pingora-core = "0.3"
pingora-proxy = "0.3"
pingora-load-balancing = "0.3"
pingora-http = "0.3"
pingora-error = "0.3"

# TLS/ACME
instant-acme = "0.7"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
rcgen = "0.13"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
notify = "6"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
parking_lot = "0.12"
bytes = "1"
http = "1"
once_cell = "1"
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "caddy-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Caddy-like web server written in Rust, powered by Pingora"

[dependencies]
caddy-core.workspace = true
caddy-proxy.workspace = true
caddy-tls.workspace = true

pingora.workspace = true
pingora-proxy.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
