[package]
name = "caddy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core configuration and utilities for caddy-rs"

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
notify.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json = "1"
