[package]
name = "proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reverse proxy implementation for avalon based on Pingora"

[features]
default = []
plugins = ["plugin"]

[dependencies]
config.workspace = true
tls.workspace = true
plugin = { workspace = true, optional = true }

pingora.workspace = true
pingora-core.workspace = true
pingora-proxy.workspace = true
pingora-load-balancing.workspace = true
pingora-http.workspace = true
pingora-error.workspace = true

tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
bytes.workspace = true
http.workspace = true
once_cell.workspace = true
mime_guess.workspace = true
chrono.workspace = true
urlencoding = "2.1"

# Compression
flate2 = "1.0"
brotli = "7"

# Rewrite
regex = "1"
rhai = { version = "1.19", features = ["sync"] }

# Authentication
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
