[package]
name = "tls"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TLS and ACME management for avalon"

[dependencies]
instant-acme.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
anyhow.workspace = true
pingora-core = { workspace = true }
openssl = "0.10"

tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
sha2.workspace = true
chrono.workspace = true
parking_lot.workspace = true
x509-parser = "0.16"
walkdir = "2"
pem = "3"

[dev-dependencies]
tempfile = "3"
